# fastapi_zero_2025

./: .coverage  app.py  models.py  pyproject.toml  schemas.py  validate.py
tests/: .coverage  conftest.py  test_app.py  test_db.py
