[project]
name = "fastapi-zero-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "F3544841 Gabriel Gomes Da Silva",email = "gomesgabriel@bb.com.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
pre_format = 'ruff check --fix'
lint = 'ruff check'
format = 'ruff format'
run = 'fastapi dev app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero_2025 -vv'
post_test = 'coverage html'